--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.32.1"
+    "@coral-xyz/anchor": "^0.32.1",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
