Add prompt hash and model id to proposal flow

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 ANCHOR_PROVIDER_URL="https://api.devnet.solana.com"
 ANCHOR_WALLET="/home/crypto/.config/solana/id_ambient.json"
 AMBIENT_API_KEY="YOUR_KEY"
+AMBIENT_MODEL_ID="zai-org/GLM-4.6"
